added statement and proof. intersections of the sets Pi_N,\lambda,L are projective varieties. added statement that Y_{A,B}^L is an irreducible quasiprojective variety

--- a/references.bib
+++ b/references.bib
@@ -288,10 +288,10 @@
 }
 
 @misc{deng15-01,
-Author = {Bangming Deng and Shiquan Ruan},
-Title = {Hall polynomials for tame type},
-Year = {2015},
-Eprint = {arXiv:1512.03504}
+	author = {Bangming Deng and Shiquan Ruan},
+	title = {Hall polynomials for tame type},
+	year = {2015},
+	eprint = {arXiv:1512.03504}
 }
 
 @article{su15,
@@ -321,4 +321,42 @@ Eprint = {arXiv:1512.03504}
   author={Jensen, B. T. and Su, X. and Yang, G.},
   journal={arXiv preprint arXiv:1705.06084},
   year={2017}
+}
+
+@article{hu07,
+	title={The Grassmanian as a Projective Variety},
+	author={D. A. Hudec},
+	year={2007}
+}
+
+@misc{dimitrov04,
+    title={Ind--varieties of generalized flags as homogeneous spaces for classical ind--groups},
+    author={Ivan Dimitrov and Ivan Penkov},
+    year={2004},
+    eprint={math/0403471},
+    archivePrefix={arXiv},
+    primaryClass={math.AG}
+}
+
+@misc{fan16,
+    title={Affine flag varieties and quantum symmetric pairs},
+    author={Zhaobing Fan and Chun-Ju Lai and Yiqiang Li and Li Luo and Weiqiang Wang},
+    year={2016},
+    eprint={1602.04383},
+    archivePrefix={arXiv},
+    primaryClass={math.RT}
+}
+
+@book{harris13,
+  title={Algebraic geometry: a first course},
+  author={Harris, Joe},
+  volume={133},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{morandi98,
+  title={Algebraic Groups, Grassmannians, and Flag Varieties},
+  author={Morandi, Patrick J},
+  year={1998}
 }
